<?xml version="1.0"?>
<package format="2">

  <name>safe_corridor_generator</name>
  <version>0.0.5</version>
  <description>The package for generation of safe corridor</description>

  <author email="vit.kratky@fel.cvut.cz">Vit Kratky</author>
  <author email="aamarin@us.es">Alfonso Alcantara</author>

  <maintainer email="aamarin@us.es">Vit Kratky</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>decomp_util</depend>
  <depend>decomp_ros_utils</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>jps3d</depend>

  <export>
    <nodelet plugin="${prefix}/decompose_nodelet.xml" />
  </export>

</package>
